--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,7 +26,7 @@ pico_enable_stdio_usb(i3cblaster 1)
 pico_enable_stdio_uart(i3cblaster 0)
 
 
-target_link_libraries(i3cblaster pico_stdlib hardware_pio  hardware_adc)
+target_link_libraries(i3cblaster pico_stdlib hardware_pio  hardware_adc hardware_i2c)
 
 pico_add_extra_outputs(i3cblaster)
 
